--- a/Parcial 2/Parcial_2_SyS.ipynb
+++ b/Parcial 2/Parcial_2_SyS.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMt6O4Nuis/bLFMLJWoXlqF",
+      "authorship_tag": "ABX9TyNrHI0cbfw4C5OZTPScuUEb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sanbgos/Se-alesysistemas/blob/main/Parcial_2_SyS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sanbgos/Se-alesysistemas/blob/main/Parcial%202/Parcial_2_SyS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -51,7 +51,8 @@
         "!chmod +x cloudflared\n",
         "!mv cloudflared /usr/local/bin/cloudflared\n",
         "!pip install yt-dlp -q\n",
-        "!apt-get install ffmpeg -y"
+        "!apt-get install ffmpeg -y\n",
+        "!mkdir -p pages"
       ],
       "metadata": {
         "id": "DW4hoOC49H3f"
@@ -157,6 +158,7 @@
         "import numpy as np\n",
         "import scipy.signal as signal\n",
         "import matplotlib.pyplot as plt\n",
+        "import os\n",
         "\n",
         "st.set_page_config(page_title=\"Punto 1 - Sistema Segundo Orden\", page_icon=\"⚙️\", layout=\"wide\")\n",
         "\n",
@@ -188,6 +190,7 @@
         "    zeta = st.sidebar.slider(\"Amortiguamiento ζ\", 1.1, 5.0, 1.5, 0.1)\n",
         "else:\n",
         "    zeta = st.sidebar.slider(\"Amortiguamiento ζ\", -1.0, -0.01, -0.5, 0.01)\n",
+        "\n",
         "\n",
         "omega_n = st.sidebar.slider(\"Frecuencia natural ωn (rad/s)\", 1.0, 20.0, 5.0, 0.5)\n",
         "\n",
@@ -314,7 +317,7 @@
         "    ax.set_ylabel(\"Amplitud\")\n",
         "    ax.grid(True)\n",
         "    ax.legend()\n",
-        "    st.pyplot(fig)\n"
+        "    st.pyplot(fig)"
       ],
       "metadata": {
         "id": "Ec2SRcr6In7M"
